# MSBI_31300

./: README.md  jsonl_skill_parser.py  main.py  model.py  prompt.py  pyproject.toml  requirements.txt  resume_parser.py  skill_scraper.py
resources/: jz_skill_patterns.jsonl  parsed_autobiography.txt  scraped_skills.txt  skill_scraper_credentials.json  skill_sentence_templates.txt
resources/tika/: tika_config.json
